[gd_scene load_steps=5 format=3 uid="uid://b12y0jil1npue"]

[ext_resource type="Texture2D" uid="uid://b2pvej8nrlqns" path="res://assets/ui/panel_beige.png" id="1_1f04c"]
[ext_resource type="Script" path="res://scenes/levelButton/level_button.gd" id="2_ahhpv"]
[ext_resource type="LabelSettings" uid="uid://bh6ka1tbdmun" path="res://assets/fonts/level_button.tres" id="2_m53bl"]
[ext_resource type="LabelSettings" uid="uid://dkjsnqwdisxv8" path="res://assets/fonts/level_button_smaller.tres" id="3_8anug"]

[node name="levelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_1f04c")
script = ExtResource("2_ahhpv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="levelNum" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_m53bl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "100"
label_settings = ExtResource("3_8anug")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
